objects/Cloudaction_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Setting_Name__c</fullName>
        <label>Setting_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Setting_Value__c</fullName>
        <label>Setting Value</label>
        <type>TextArea</type>
    </fields>
    <label>Cloudaction Settings</label>
</CustomObject>